<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Default -->
    <string name="app_name">Contact Manager</string>
    <string name="hello_world">Hello world!</string>

    <!-- Main Activity -->
    <string name="action_main_menu">Option Menu</string>
    <string name="action_import_export">Import/Export</string>
    <string name="action_multi_select">Multiple Selection</string>
    <string name="action_sort_options">Sort by…</string>
    <string name="action_show_options">Show…</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="action_create_new">Add new</string>
    <string name="text_search">Search</string>

    <!-- Add new Activity -->
    <string name="action_create_done">Done</string>
    <string name="action_create_discard">Discard</string>
    <string name="action_new_field">Add another field</string>
    <string name="text_name">Name</string>
    <string name="text_name_prefix">Name prefix</string>
    <string name="text_name_given">Given name</string>
    <string name="text_name_middle">Middle name</string>
    <string name="text_name_surname">Family name</string>
    <string name="text_name_suffix">Name suffix</string>
    <string name="text_phone">Phone</string>
    <string name="text_number">Number</string>
    <string name="text_address">Address</string>
    <string name="text_email">E-mail</string>
    <string name="text_dob">Date of Birth</string>
    <string name="text_date">Date</string>
    <string name="text_notes">Notes</string>
    <string name="text_website">Website</string>
    <string name="text_url">URL</string>
    <string name="text_org">Organisation</string>
    <string name="text_company">Company</string>
    <string name="text_job">Job Title</string>

    <!-- Info Activity -->
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>

    <!-- Icon content descriptions -->
    <string name="disc_avatar">Avatar ic</string>
    <string name="disc_expand">Expand</string>
    <string name="disc_collapse">Collapse</string>
    <string name="disc_mk_field">+</string>
    <string name="disc_rm_field">-</string>
    <string name="disc_search">Search ic</string>
    <string name="disc_clear">Clear</string>
    <string name="title_activity_new_contact">NewContactActivity</string>
    <string name="title_activity_contact_info_activty">ContactInfoActivty</string>

</resources>
