<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!--
    <item android:id="@+id/action_search"
      android:title="@string/disc_search"
      android:icon="@drawable/ic_action_search"
      android:showAsAction="always|collapseActionView"
      android:actionViewClass="android.widget.SearchView"/>
    -->

    <item
        android:id="@id/action_add_new"
        android:icon="@drawable/ic_action_content_new"
        android:showAsAction="always"
        android:title="@string/action_create_new"/>
    
    <item
        android:id="@id/action_sort_options"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/action_sort_options"/>

    <item
        android:id="@id/action_exit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:orderInCategory="6"
        android:showAsAction="never"
        android:title="@string/action_exit"/>

</menu>