<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewContactActivity" >

    <!-- Root Pane -->

    <LinearLayout
        android:id="@id/layout_new_contact_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >


            <!-- Avatar icon and name fields -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <!-- Avatar icon -->

                <ImageButton
                    android:id="@id/button_change_display_image"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:contentDescription="@string/disc_display_image"
                    android:src="@drawable/ic_face" />

                <!-- Name fields -->

                <LinearLayout
                    android:id="@id/layout_namefields"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="80"
                    android:orientation="vertical"
                    android:paddingTop="30dp" >

                    <EditText
                        android:id="@id/textfield_name_full"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/text_name"
                        android:inputType="textPersonName|textCapWords" >

                        <requestFocus />
                    </EditText>

                    <EditText
                        android:id="@id/textfield_name_given"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/text_name_given"
                        android:inputType="textPersonName|textCapWords" />

                    <EditText
                        android:id="@id/textfield_name_middle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/text_name_middle"
                        android:inputType="textPersonName|textCapWords" />

                    <EditText
                        android:id="@id/textfield_name_last"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/text_name_surname"
                        android:inputType="textPersonName|textCapWords" />

                    <EditText
                        android:id="@id/textfield_name_suffix"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/text_name_suffix"
                        android:inputType="textPersonName|textCapWords" />
                </LinearLayout>

                <!-- Expand/Collapse button -->

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:orientation="vertical"
                    android:paddingTop="30dp" >

                    <ImageButton
                        android:id="@id/button_name_expand"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@color/Transparent"
                        android:contentDescription="@string/disc_expand"
                        android:src="@android:drawable/ic_menu_more" />

                    <ImageButton
                        android:id="@id/button_name_collapse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@color/Transparent"
                        android:contentDescription="@string/disc_collapse"
                        android:rotation="180"
                        android:src="@android:drawable/ic_menu_more" />


                </LinearLayout>
            </LinearLayout>

            <!-- Separator -->

            <View style="@style/style_separator_thick" />

            <!-- Phone fields -->

            <LinearLayout
                android:id="@id/layout_phonefields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="80"
                        android:gravity="center_vertical|left"
                        android:text="@string/text_phone"
                        android:textColor="@color/Azure"
                        android:textSize="18sp" />

                    <ImageButton
                        android:id="@id/button_new_number"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:background="@color/Transparent"
                        android:contentDescription="@string/disc_mk_field"
                        android:onClick="addNewField"
                        android:src="@android:drawable/ic_menu_add" />
                </LinearLayout>

                <!-- This layout can change dynamically -->

                <LinearLayout
                    android:id="@id/layout_dynamic_phonefield"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="5dp" >
                </LinearLayout>

                <View style="@style/style_separator_thin" />
            </LinearLayout>

            <!-- Email fields -->

            <LinearLayout
                android:id="@id/layout_emailfields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="80"
                        android:gravity="center_vertical|left"
                        android:text="@string/text_email"
                        android:textColor="@color/Azure"
                        android:textSize="18sp" />

                    <ImageButton
                        android:id="@id/button_new_email"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:background="@color/Transparent"
                        android:contentDescription="@string/disc_mk_field"
                        android:onClick="addNewField"
                        android:src="@android:drawable/ic_menu_add" />
                </LinearLayout>

                <!-- This layout can change dynamically -->

                <LinearLayout
                    android:id="@id/layout_dynamic_emailfield"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="5dp" >
                </LinearLayout>

                <View style="@style/style_separator_thin" />
            </LinearLayout>

            <!-- Address fields --><LinearLayout
            android:id="@id/layout_addressfields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="80"
                    android:gravity="center_vertical|left"
                    android:text="@string/text_address"
                    android:textColor="@color/Azure"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@id/button_new_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:background="@color/Transparent"
                    android:contentDescription="@string/disc_mk_field"
                    android:onClick="addNewField"
                    android:src="@android:drawable/ic_menu_add" />
            </LinearLayout>

            <!-- This layout can change dynamically -->

            <LinearLayout
                android:id="@id/layout_dynamic_addressfield"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="5dp" >
            </LinearLayout>

            <View style="@style/style_separator_thin" />
        </LinearLayout>

        <!-- DOB fields -->

        <LinearLayout
            android:id="@id/layout_dobfields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|left"
                    android:text="@string/text_dob"
                    android:textColor="@color/Azure"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@id/textview_dob"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="80"
                        android:background="@drawable/edit_text_holo_dark"
                        android:clickable="true"
                        android:ems="10"
                        android:gravity="bottom|left"
                        android:hint="@string/text_date"
                        android:textSize="18sp" />

                    <ImageButton
                        android:id="@+id/button_clear_dob"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="20"
                        android:background="@color/Transparent"
                        android:contentDescription="@string/disc_clear"
                        android:src="@android:drawable/ic_input_delete" />
                </LinearLayout>
            </LinearLayout>

            <View style="@style/style_separator_thin" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>